k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saanse
  labels:
    name: saanse
    app.kubernetes.io/name: saanse
    app.kubernetes.io/component: namespace
