k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saanse-service
  namespace: saanse
  labels:
    app.kubernetes.io/name: saanse
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: saanse
    app.kubernetes.io/component: application
